@@ -8,7 +8,10 @@ import java.util.StringJoiner;
 import lombok.experimental.UtilityClass;
 import net.dv8tion.jda.api.entities.emoji.Emoji;
 import net.dv8tion.jda.api.events.interaction.GenericInteractionCreateEvent;
+import net.dv8tion.jda.api.interactions.components.ActionRow;
 import net.dv8tion.jda.api.interactions.components.buttons.Button;
+import net.dv8tion.jda.api.utils.messages.MessageCreateBuilder;
+import net.dv8tion.jda.api.utils.messages.MessageCreateData;
 import ti4.buttons.Buttons;
 import ti4.helpers.ActionCardHelper;
 import ti4.helpers.AgendaHelper;
@@ -33,6 +36,8 @@ import ti4.map.Planet;
 import ti4.map.Player;
 import ti4.map.Tile;
 import ti4.map.UnitHolder;
+import ti4.message.GameMessageManager;
+import ti4.message.GameMessageType;
 import ti4.message.MessageHelper;
 import ti4.model.DeckModel;
 import ti4.model.PromissoryNoteModel;
@@ -174,20 +179,18 @@ public class StartPhaseService {
                 && player2.getActionCards().containsKey("deflection")) {
                 ActionCardHelper.playAC(event, game, player2, "deflection", game.getMainGameChannel());
             }
-            if (player2.hasLeader("zealotshero") && player2.getLeader("zealotshero").get().isActive()) {
-                if (!game.getStoredValue("zealotsHeroTechs").isEmpty()) {
-                    String list = game.getStoredValue("zealotsHeroTechs");
-                    List<Button> buttons = new ArrayList<>();
-                    for (String techID : list.split("-")) {
-                        buttons.add(Buttons.green("purgeTech_" + techID, "Purge " + Mapper.getTech(techID).getName()));
-                    }
-                    String msg = player2.getRepresentationUnfogged() + " due to Saint Binal, the Rhodun hero, you have to purge 2 technologies. Use buttons to purge ";
-                    MessageHelper.sendMessageToChannelWithButtons(player2.getCorrectChannel(), msg + "the first technology.", buttons);
-                    MessageHelper.sendMessageToChannelWithButtons(player2.getCorrectChannel(), msg + "the second technology.", buttons);
-                    player2.removeLeader("zealotshero");
-                    game.setStoredValue("zealotsHeroTechs", "");
-                    game.setStoredValue("zealotsHeroPurged", "true");
+            if (player2.hasLeader("zealotshero") && player2.getLeader("zealotshero").get().isActive() && !game.getStoredValue("zealotsHeroTechs").isEmpty()) {
+                String list = game.getStoredValue("zealotsHeroTechs");
+                List<Button> buttons = new ArrayList<>();
+                for (String techID : list.split("-")) {
+                    buttons.add(Buttons.green("purgeTech_" + techID, "Purge " + Mapper.getTech(techID).getName()));
                 }
+                String msg = player2.getRepresentationUnfogged() + " due to Saint Binal, the Rhodun hero, you have to purge 2 technologies. Use buttons to purge ";
+                MessageHelper.sendMessageToChannelWithButtons(player2.getCorrectChannel(), msg + "the first technology.", buttons);
+                MessageHelper.sendMessageToChannelWithButtons(player2.getCorrectChannel(), msg + "the second technology.", buttons);
+                player2.removeLeader("zealotshero");
+                game.setStoredValue("zealotsHeroTechs", "");
+                game.setStoredValue("zealotsHeroPurged", "true");
             }
         }
         if (!game.getStoredValue("agendaConstitution").isEmpty()) {
@@ -208,13 +211,13 @@ public class StartPhaseService {
                     MessageHelper.sendMessageToChannel(player2.getCardsInfoThread(), player2.getRepresentation() +
                         ", because _New Constitution_ resolved \"Against\", " +
                         String.join(", ", exhausted.subList(0, exhausted.size()-1)) + " and "
-                        + exhausted.get(exhausted.size()-1) + " have been exhausted.");
+                        + exhausted.getLast() + " have been exhausted.");
                 }
                 else if (exhausted.size() == 1)
                 {
                     MessageHelper.sendMessageToChannel(player2.getCardsInfoThread(), player2.getRepresentation() +
                         ", because _New Constitution_ resolved \"Against\", "
-                        + exhausted.get(0) + " has been exhausted.");
+                        + exhausted.getFirst() + " has been exhausted.");
                 }
                 else
                 {
@@ -244,13 +247,13 @@ public class StartPhaseService {
                     MessageHelper.sendMessageToChannel(player2.getCardsInfoThread(), player2.getRepresentation() +
                         ", because _Arms Reduction_ resolved \"Against\", " +
                         String.join(", ", exhausted.subList(0, exhausted.size()-1)) + " and "
-                        + exhausted.get(exhausted.size()-1) + " have been exhausted.");
+                        + exhausted.getLast() + " have been exhausted.");
                 }
                 else if (exhausted.size() == 1)
                 {
                     MessageHelper.sendMessageToChannel(player2.getCardsInfoThread(), player2.getRepresentation() +
                         ", because _Arms Reduction_ resolved \"Against\", "
-                        + exhausted.get(0) + " has been exhausted.");
+                        + exhausted.getFirst() + " has been exhausted.");
                 }
             }
             MessageHelper.sendMessageToChannel(game.getMainGameChannel(), "Exhausted all planets with technology specialties due to _Arms Reduction_ resolving \"Against\".");
@@ -296,13 +299,13 @@ public class StartPhaseService {
                         MessageHelper.sendMessageToChannel(player2.getCardsInfoThread(), player2.getRepresentation() +
                             ", because you voted \"Against\" on _Representative Government_, " +
                             String.join(", ", exhausted.subList(0, exhausted.size()-1)) + " and "
-                            + exhausted.get(exhausted.size()-1) + " have been exhausted.");
+                            + exhausted.getLast() + " have been exhausted.");
                     }
                     else if (exhausted.size() == 1)
                     {
                         MessageHelper.sendMessageToChannel(player2.getCardsInfoThread(), player2.getRepresentation() +
                             ", because you voted \"Against\" on _Representative Government_, "
-                            + exhausted.get(0) + " has been exhausted.");
+                            + exhausted.getFirst() + " has been exhausted.");
                     }
                     else
                     {
@@ -325,12 +328,12 @@ public class StartPhaseService {
             MessageHelper.sendMessageToChannel(event.getMessageChannel(), "Speaker not found. Can't proceed.");
             return;
         }
-        String message = speaker.getRepresentationUnfogged() + " is up to pick a strategy card.\n";
+        String message = speaker.getRepresentationUnfogged() + " is up to pick a strategy card.";
         game.updateActivePlayer(speaker);
         game.setPhaseOfGame("strategy");
-        String pickSCMsg = "Use buttons to pick a strategy card.";
+        String pickSCMsg = " Please use the buttons to pick a strategy card.";
         if (game.getLaws().containsKey("checks") || game.getLaws().containsKey("absol_checks")) {
-            pickSCMsg = "Use buttons to pick the strategy card you wish to give to someone else.";
+            pickSCMsg = " Please use the buttons to pick the strategy card you wish to give to someone else.";
         }
         ButtonHelperAbilities.giveKeleresCommsNTg(game, event);
         game.setStoredValue("startTimeOfRound" + game.getRound() + "Strategy", System.currentTimeMillis() + "");
@@ -522,7 +525,14 @@ public class StartPhaseService {
         if (yssarilPolicy != null) {
             buttons.add(yssarilPolicy);
         }
-        MessageHelper.sendMessageToChannelWithButtons(game.getMainGameChannel(), message2, buttons);
+
+        MessageCreateData messageObject = new MessageCreateBuilder()
+            .addContent(message2)
+            .addComponents(ActionRow.of(buttons)).build();
+
+        game.getMainGameChannel().sendMessage(messageObject).queue(message ->
+            GameMessageManager.replace(game.getName(), message.getId(), GameMessageType.STATUS_END, game.getLastModifiedDate()));
+
         GameLaunchThreadHelper.checkIfCanCloseGameLaunchThread(game, false);
     }
 
